@@ -1,3 +1,7 @@
+2003-05-28  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b41
+	
+	* Bugfix and a few cosmetic changes to backup_albums.php
+
 2003-05-28  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b40
 
 	*  Added backup_albums.php.  Linked from albums.php, but that 
